<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="233dp"
        android:layout_height="215dp"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/txtUserEmail"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/logInUserEmailHint"
        android:inputType="textEmailAddress"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtUserPassword"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/logInUserPasswordHint"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:text="@string/logInButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:text="@string/logInSignUpButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>