<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_SignUp">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="233dp"
        android:layout_height="215dp"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/txtCreateUsername"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/SignUpUsernameHint"
        android:inputType="text"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <EditText
        android:id="@+id/txtCreateUserEmail"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/logInUserEmailHint"
        android:inputType="textEmailAddress"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtCreateUserPassword"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/logInUserPasswordHint"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/txtConfirmUserPassword"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/SignUpConfirmPasswordHint"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCreateUser"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="#000000"
        android:text="@string/SignUpCreateAccountButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>